--- a/actividad2/styles/index.css
+++ b/actividad2/styles/index.css
@@ -29,7 +29,7 @@
 /* -------------------- BODY -------------------- */
 body{
     background-color: var(--colorFondo);
-    width: 100vw;
+    width: 100%;
     height: auto;
     /* Overflow -> sirve para definir lo que sucede con los elementos que sobresalen del contenedor */
     overflow-x: hidden;
@@ -56,8 +56,8 @@ header{
     1.position: static; -> ocupa un espacio en mi sitio web
     2.position: fixed; -> Fija a un elemento hijo durante todo el sitio web
     3.position: relative; 
-    4.position: absolute;
-    5.position: sticky; -> Fija al contenedor, siempre y cuando el contenedor se vea (efecto de deslizamiento)
+    4.position: absolute; 
+    5.position: sticky; -> Fija al contenedor (efecto de deslizamiento)
 
     Especifican el posicionamiento:
 
@@ -86,7 +86,6 @@ header{
 }
 
 .logo{
-    border: solid purple;
     /* da dimension al contenedor segun la clase .menuNav para despues definir las dimensiones del logo */
     height: 100%; 
 }
@@ -132,7 +131,6 @@ header{
 }
 
 .listaMenu{
-    border: solid green;
     /* colocamos los elementos uno al lado del otro */
     display: flex;
     flex-direction: row;
@@ -159,7 +157,6 @@ main{
 }
 
 .contenedorPrincipal{
-    border: solid red;
     font-family: var(--textContent);
 }
 
@@ -174,9 +171,77 @@ main{
     /* modificamos la margen externa del conteneddor */
     margin-top: 50px;
     /* damos redondez a los bordes del contenedor */
-    border-radius: 30px;
+    border-radius: 50px;
+    /* ocultamos lo que sobre salga del contenedor */
+    overflow: hidden;
+    /* damos una grilla al contenedor padre de las imagenes */
+    display: grid;
+    /* division de las filas */
+    grid-template-rows: repeat(2, 1fr);
+    /* division de las columnas */
+    grid-template-columns: repeat(4, 1fr);
 }
 
+.contenedorImagenes img{
+    /* indicamos que las imagenes ocupen el mismo ancho y alto que la grilla */
+    width: 100%;
+    height: 100%;
+}
+
+.imagenes{
+    display: grid;
+    position: relative;
+}
+
+.img1{
+    grid-row: 1/3;
+    grid-column: 4/5;
+}
+
+.img2{
+    grid-row: 1/2;
+    grid-column: 2/4;
+}
+
+.img3{
+    grid-row: 1/3;
+    grid-column: 1/2;
+}
+
+.img4{
+    grid-row: 2/3;
+    grid-column: 3/4;
+}
+
+.img5{
+    grid-row: 2/3;
+    grid-column: 2/3;
+}
+
+.parrafo-img{
+    background-color: var(--colorFondo);
+    position: absolute;
+    /* por defecto se organiza top: 0 y left: 0 */
+    /* indicamos que ocupe todo el contenedor */
+    width: 100%;
+    height: 100%;
+    /* centramos el contenedor en x e y */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* damos margen externo */
+    padding: 25px;
+    /* cambiamos color texto */
+    color: var(--colorEnfasis3);
+    /* cambiamos la opacidad de los elementos opacidad 0%-100%*/
+    opacity: 0;
+}
+
+.parrafo-img:hover{
+    opacity: 0.6;
+    /* cuando el cursor se ponga sobre la imagen salga una mano */
+    cursor: pointer;
+}
 /* ---------------------------- FOOTER ---------------------------- */
 
 footer{
